--- a/miaoshaStable/src/main/resources/application.properties
+++ b/miaoshaStable/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8090
 mybatis.mapperLocations=classpath:mapping/*.xml
 
 spring.datasource.name=miaosha
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/miaosha?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://47.92.208.166:3306/miaosha?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 
