redis cache login

--- a/miaoshaStable/src/main/resources/application.properties
+++ b/miaoshaStable/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
 
+#配置springboot对redis的依赖
+spring.redis.host=47.92.208.166
+spring.redis.port=6379
+spring.redis.database=10
+#spring.redis.password=
+
+spring.redis.jedis.pool.max-active=50
+spring.redis.jedis.pool.min-idle=20
