redis for item service

--- a/miaoshaStable/src/main/resources/application.properties
+++ b/miaoshaStable/src/main/resources/application.properties
@@ -13,6 +13,15 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
+#tomcat 配置
+#server.tomcat.accesslog.buffered=false
+#server.tomcat.accesslog.enabled=true
+#server.tomcat.accesslog.directory=/var/www/miaosha/tomcat
+#server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b %D
+server.tomcat.accept-count=1000
+server.tomcat.max-connections=20000
+server.tomcat.max-thread=800
+server.tomcat.min-spare-threads=50
 
 #配置springboot对redis的依赖
 spring.redis.host=47.92.208.166
