--- a/miaoshaStable/pom.xml
+++ b/miaoshaStable/pom.xml
@@ -74,6 +74,12 @@
       <artifactId>guava</artifactId>
       <version>18.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.rocketmq/rocketmq-client -->
+    <dependency>
+      <groupId>org.apache.rocketmq</groupId>
+      <artifactId>rocketmq-client</artifactId>
+      <version>4.6.0</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
